# qa_guru_python_5_18_poetry

./: README.md  pyproject.toml
