[tool.poetry]
name = "qa-guru-python-5-18-poetry"
version = "0.1.0"
description = ""
authors = ["Victor Chp <qatester906@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_guru_python_5_18_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc2"
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
